--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "autoload": {
     "psr-4": {
-      "ChristopherDarling\\TemplateInlineFile": "src/"
+      "ChristopherDarling\\TemplateInlineFile\\": "src/"
     }
   },
   "prefer-stable": true,
