--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     }
   ],
   "require": {
-    "php": ">=8.0.0",
-    "silverstripe/framework": "^4.0 || ^5.0"
+    "php": ">=8.2.0",
+    "silverstripe/framework": "^^5.0 || ^6.0"
   },
   "support": {
     "issues": "https://github.com/christopherdarling/silverstripe-template-inline-file/issues"
