--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   ],
   "require": {
     "php": ">=8.2.0",
-    "silverstripe/framework": "^^5.0 || ^6.0"
+    "silverstripe/framework": "^5.0 || ^6.0"
   },
   "support": {
     "issues": "https://github.com/christopherdarling/silverstripe-template-inline-file/issues"
